layout bugfix: big people list > ul needed width: 100%

--- a/mysite/static/css/profile/search_people.css
+++ b/mysite/static/css/profile/search_people.css
@@ -16,11 +16,12 @@ body#people-map .left{float:left; width:51px; }
 body#people-map .profile-link:hover {text-decoration:none; color:#000; }
 body#people-map .profile-link{ position: relative; top: -5px; border-radius:8px; -moz-border-radius:8px; background-color:#ddf; color:#555; padding:4px 8px; border:2px solid #fff; font-size: .85em; float:right; margin-left:4px; }
 #big-people-list,#big-people-list ul,#people-count,#big-people-list .people-list-map{float:left; }
+.people-list-page #big-people-list ul#people-list {width: 100% }
 #people-list li.hover{background:#ffc; }
 #people-list li.highlighted{background:#ffa !important; }
 #people-list li.highlighted .name{text-shadow:0 1px 0 #fff; }
 #people-list .people-list-column{width:32%; float:left; border-left:1px dashed #CCC; padding-left:15px; }
-#people-list .people-list-column:first-child{border-left:none; padding-left:0; }
+#people-list .people-list-column:first-child {border-left:none; padding-left:0; }
 #people-list li{border-radius:8px; -moz-border-radius:8px; margin-bottom:3px; list-style:none; display:block; float:left; width:94%; padding:8px; }
 #people-list li img{font-size:51px; vertical-align:top; float:left; margin-right:10px; margin-bottom:5px; }
 #people-list li .name{display:block; font-size:1.1em; margin-bottom:2px; font-weight:700; }
